--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -29,13 +29,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "AoTlcpeNoL4k"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "_yzMBMsyCQub"
       },
@@ -1087,7 +1080,7 @@
       "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "cVWKtXHGo1Ss"
+        "id": "q9Str0HhrXeL"
       }
     },
     {
@@ -1175,170 +1168,185 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To determine the maximum/minimum values for each body-type and identify the \"costliest\" one, we'll consider various factors such as:\n",
+        "To determine the \"costliest\" body-type, let's consider various factors such as:\n",
         "\n",
         "\n",
-        "1. Computational resources\n",
-        "2. Training time\n",
-        "3. Data requirements\n",
-        "4. Augmentation complexity\n",
+        "1. Production costs\n",
+        "2. Materials used\n",
+        "3. Complexity of design\n",
+        "4. Market demand\n",
         "\n",
         "\n",
-        "Assuming a standard classification task, here's a rough estimate of the maximum/minimum values for each body-type:\n",
+        "Assuming a standard automotive market, here's a rough estimate of the maximum/minimum values for each body-type:\n",
         "\n",
         "\n",
         "*Body-Types:*\n",
         "\n",
-        "1. *ResNet50*\n",
-        "    - Max: 98.5% accuracy, 100M parameters, 1000+ training images\n",
-        "    - Min: 70% accuracy, 10M parameters, 100 training images\n",
-        "2. *MobileNet*\n",
-        "    - Max: 96.2% accuracy, 10M parameters, 500+ training images\n",
-        "    - Min: 60% accuracy, 1M parameters, 50 training images\n",
-        "3. *VGG16*\n",
-        "    - Max: 94.5% accuracy, 138M parameters, 1500+ training images\n",
-        "    - Min: 65% accuracy, 20M parameters, 200 training images\n",
+        "1. Sedan\n",
+        "    - Max price: $50,000 (luxury sedans)\n",
+        "    - Min price: $15,000 (economy sedans)\n",
+        "\n",
+        "2. SUV\n",
+        "    - Max price: $80,000 (luxury SUVs)\n",
+        "    - Min price: $20,000 (compact SUVs)\n",
+        "\n",
+        "3. Truck\n",
+        "    - Max price: $60,000 (heavy-duty trucks)\n",
+        "    - Min price: $20,000 (light-duty trucks)\n",
+        "\n",
+        "4. Hatchback\n",
+        "    - Max price: $30,000 (high-end hatchbacks)\n",
+        "    - Min price: $10,000 (economy hatchbacks)\n",
+        "\n",
+        "5. Coupe\n",
+        "    - Max price: $100,000 (luxury coupes)\n",
+        "    - Min price: $20,000 (entry-level coupes)\n",
         "\n",
         "\n",
         "*Costliest Body-Type:*\n",
         "\n",
-        "Based on computational resources, training time, and data requirements, *VGG16* is the \"costliest\" body-type.\n",
+        "Based on production costs, materials, design complexity, and market demand, the Coupe is the \"costliest\" body-type.\n",
         "\n",
         "\n",
         "*Why:*\n",
         "\n",
-        "1. Large number of parameters (138M)\n",
-        "2. High computational requirements (GPU-intensive)\n",
-        "3. Long training times (>24 hours)\n",
-        "4. Large dataset requirements (>1500 images)\n",
+        "1. Luxury features and materials\n",
+        "2. Complex design and engineering\n",
+        "3. High-performance capabilities\n",
+        "4. Limited production volume\n",
+        "5. Premium pricing strategy\n",
         "\n",
         "\n",
         "*Cheapest Body-Type:*\n",
         "\n",
-        "*MobileNet* is the most efficient body-type.\n",
+        "The Hatchback is the most affordable body-type.\n",
         "\n",
         "\n",
         "*Why:*\n",
         "\n",
-        "1. Small number of parameters (1M)\n",
-        "2. Low computational requirements (CPU-friendly)\n",
-        "3. Short training times (<1 hour)\n",
-        "4. Small dataset requirements (>50 images)\n",
+        "1. Economy-grade materials\n",
+        "2. Simple design and engineering\n",
+        "3. Compact size\n",
+        "4. High production volume\n",
+        "5. Competitive pricing strategy\n",
         "\n",
         "\n",
-        "Keep in mind that these estimates vary depending on specific use cases and hardware configurations.\n",
+        "Keep in mind that these estimates vary depending on factors like location, brand, and trim level.\n",
         "\n",
         "\n",
         "Would you like more information on:\n",
         "\n",
         "\n",
-        "1. Optimizing model architecture for efficiency?\n",
-        "2. Reducing computational resources for training?\n",
-        "3. Transfer learning strategies?"
+        "1. Automotive market trends?\n",
+        "2. Pricing strategies?\n",
+        "3. Body-type-specific features?"
       ],
       "metadata": {
-        "id": "4dNivQXQockg"
+        "id": "lvAiCjE6q0bx"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Excellent point!\n",
-        "\n",
-        "\n",
-        "Maximum/minimum values provide a rough estimate, but considering the interquartile range (IQR) offers a more nuanced understanding of the data distribution.\n",
+        "Maximum/minimum values provide a rough estimate, but considering the interquartile range (IQR) offers a more nuanced understanding.\n",
         "\n",
         "\n",
         "_Why IQR matters:_\n",
         "\n",
         "1. Robustness: IQR is resistant to outliers, providing a better representation of the data's central tendency.\n",
-        "2. Variability: IQR captures the spread of the data, indicating the body-type's consistency.\n",
+        "2. Variability: IQR captures the spread of the data, indicating the body-type's price consistency.\n",
         "3. Comparison: IQR enables fair comparisons between body-types with differing scales.\n",
         "\n",
         "\n",
         "_Interpretation with IQR:_\n",
         "\n",
-        "1. *VGG16*: High IQR (10-20%) indicates significant variability in performance.\n",
-        "2. *ResNet50*: Moderate IQR (5-15%) suggests relatively consistent performance.\n",
-        "3. *MobileNet*: Low IQR (2-10%) implies robust and efficient performance.\n",
+        "1. Sedan: IQR = $25,000 - $40,000 (moderate variability)\n",
+        "2. SUV: IQR = $30,000 - $55,000 (higher variability)\n",
+        "3. Truck: IQR = $25,000 - $45,000 (moderate variability)\n",
+        "4. Hatchback: IQR = $15,000 - $25,000 (lower variability)\n",
+        "5. Coupe: IQR = $50,000 - $90,000 (higher variability)\n",
         "\n",
         "\n",
-        "_Costliest Body-Type Reevaluation:_\n",
+        "_Reevaluation of Costliest Body-Type:_\n",
         "\n",
-        "Considering IQR, *VGG16* remains the costliest due to:\n",
-        "\n",
-        "\n",
-        "1. High computational requirements\n",
-        "2. Large parameter count\n",
-        "3. Significant performance variability (high IQR)\n",
+        "Considering IQR, Coupe remains the costliest due to:\n",
         "\n",
         "\n",
-        "However, *ResNet50* might be considered more costly than initially thought, given its:\n",
+        "1. High maximum price\n",
+        "2. Large IQR (indicating significant price variability)\n",
+        "3. Luxury features and materials\n",
         "\n",
         "\n",
-        "1. Moderate IQR, indicating some performance variability\n",
-        "2. Higher computational requirements compared to MobileNet\n",
+        "However, SUV's higher IQR suggests:\n",
         "\n",
         "\n",
-        "*MobileNet* remains the most efficient, with:\n",
+        "1. Greater price variability\n",
+        "2. Larger range of trim levels and options\n",
+        "3. Potential for higher costs\n",
         "\n",
         "\n",
-        "1. Low IQR, ensuring consistent performance\n",
-        "2. Small parameter count\n",
-        "3. Low computational requirements\n",
+        "_Hatchback's_ lower IQR indicates:\n",
+        "\n",
+        "\n",
+        "1. More consistent pricing\n",
+        "2. Fewer trim levels and options\n",
+        "3. Economy-grade features\n",
         "\n",
         "\n",
         "_Additional considerations:_\n",
         "\n",
-        "1. *Median*: A better central tendency indicator than mean, as it's robust to outliers.\n",
-        "2. *Box plots*: Visualize IQR, median, and outliers for intuitive comparison.\n",
-        "3. *Statistical tests*: Compare body-types using hypothesis testing (e.g., ANOVA, t-tests).\n",
+        "1. Median: A better central tendency indicator than mean, as it's robust to outliers.\n",
+        "2. Box plots: Visualize IQR, median, and outliers for intuitive comparison.\n",
+        "3. Statistical tests: Compare body-types using hypothesis testing (e.g., ANOVA, t-tests).\n",
         "\n",
         "\n",
-        "By incorporating IQR and additional metrics, you'll gain a more comprehensive understanding of the body-types' performance and cost.\n",
+        "By incorporating IQR and additional metrics, you'll gain a more comprehensive understanding of the body-types' price distributions.\n",
         "\n",
         "\n",
         "Would you like more information on:\n",
         "\n",
         "\n",
-        "1. Advanced statistical analysis for model comparison?\n",
-        "2. Visualizing data distributions with box plots?\n",
-        "3. Hypothesis testing for model selection?"
+        "1. Advanced statistical analysis for price comparison?\n",
+        "2. Data visualization techniques for price distribution?\n",
+        "3. Hypothesis testing for body-type comparison?"
       ],
       "metadata": {
-        "id": "wkEOlXE5op26"
+        "id": "IVXiqPmLrKwS"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Yes, the body-style of a car can be a good predictor for its price, but with limitations.\n",
+        "Yes, body-style can be a good predictor for a car's price, but with limitations.\n",
         "\n",
         "\n",
-        "_Why it works:_\n",
+        "_Predictive power:_\n",
         "\n",
-        "1. Body-style influences design, engineering, and production costs.\n",
-        "2. Certain body-styles (e.g., SUVs, luxury sedans) are often associated with higher prices.\n",
-        "3. Market demand and segment positioning also impact pricing.\n",
+        "Body-style influences:\n",
+        "\n",
+        "1. Production costs (design, materials, manufacturing)\n",
+        "2. Market demand and positioning\n",
+        "3. Feature sets and options\n",
+        "4. Brand reputation and targeting\n",
         "\n",
         "\n",
         "_Limitations:_\n",
         "\n",
         "1. Overlapping price ranges: Different body-styles can have similar price points.\n",
         "2. Variability within body-styles: Trim levels, options, and features affect pricing.\n",
-        "3. Other factors dominate: Engine size, transmission, drivetrain, and brand reputation can outweigh body-style.\n",
+        "3. Other factors dominate: Engine size, transmission, drivetrain, and technology features.\n",
         "\n",
         "\n",
-        "_Body-styles with distinct price ranges:_\n",
+        "_Body-styles with strong price indication:_\n",
         "\n",
-        "1. SUVs/Pickups: Generally pricier than sedans/hatchbacks.\n",
-        "2. Luxury sedans: Often more expensive than non-luxury counterparts.\n",
-        "3. Sports cars: Typically pricey due to performance and design.\n",
+        "1. Luxury sedans: High-end materials, advanced features, and premium pricing.\n",
+        "2. SUVs/Pickups: Larger size, increased production costs, and higher pricing.\n",
+        "3. Sports cars: Performance-oriented design, premium materials, and high pricing.\n",
         "\n",
         "\n",
-        "_Body-styles with overlapping price ranges:_\n",
+        "_Body-styles with weaker price indication:_\n",
         "\n",
-        "1. Sedans/Hatchbacks: Similar prices across various brands and trim levels.\n",
+        "1. Hatchbacks: Economy-grade materials, simple design, and variable pricing.\n",
         "2. Crossovers: Blending SUV and sedan features, with varying price points.\n",
         "\n",
         "\n",
@@ -1353,7 +1361,7 @@
         "\n",
         "_Machine learning approach:_\n",
         "\n",
-        "1. Use a combination of body-style, features, and other factors as inputs.\n",
+        "1. Use body-style, features, and other factors as inputs.\n",
         "2. Train models (e.g., linear regression, decision trees, neural networks) on labeled data.\n",
         "3. Hyperparameter tuning and feature engineering can improve predictions.\n",
         "\n",
@@ -1364,7 +1372,10 @@
         "2. UCI Machine Learning Repository's \"Automobile\" dataset\n",
         "\n",
         "\n",
-        "Keep in mind that price prediction models should consider multiple factors beyond body-style.\n",
+        "_Accuracy estimates:_\n",
+        "\n",
+        "1. Simple models: 60-70% accuracy\n",
+        "2. Advanced models: 80-90% accuracy\n",
         "\n",
         "\n",
         "Would you like more information on:\n",
@@ -1375,14 +1386,7 @@
         "3. Data visualization techniques for exploratory analysis?"
       ],
       "metadata": {
-        "id": "zuJUZI0so3AZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "1ZD5pOenoPO7"
+        "id": "IoRi9JahrYzr"
       }
     }
   ],
