--- a/FMML_M1L4.ipynb
+++ b/FMML_M1L4.ipynb
@@ -24,13 +24,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "VLwZcAVXpbP_"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -918,12 +911,12 @@
         "\n",
         "*Transformation Matrices:*\n",
         "\n",
-        "1. *Rotation*: Rotate images by 90, 180, and 270 degrees.\n",
-        "2. *Flipping*: Flip images horizontally and vertically.\n",
-        "3. *Scaling*: Scale images by 0.5, 1.5, and 2.\n",
-        "4. *Translation*: Translate images by (10, 10), (20, 20), and (30, 30) pixels.\n",
-        "5. *Shear*: Apply shear transformations with angles 15, 30, and 45 degrees.\n",
-        "6. *Perspective*: Apply perspective transformations with random points.\n",
+        "1. Rotation (R)\n",
+        "2. Scaling (S)\n",
+        "3. Translation (T)\n",
+        "4. Flipping (F)\n",
+        "5. Shear (Sh)\n",
+        "6. Perspective (P)\n",
         "\n",
         "\n",
         "*Experiment Setup:*\n",
@@ -940,36 +933,33 @@
         "| Transformation | Accuracy (%) |\n",
         "| --- | --- |\n",
         "| No Transformation | 85.2 |\n",
-        "| Rotation (90) | 84.5 |\n",
-        "| Rotation (180) | 84.1 |\n",
-        "| Rotation (270) | 84.3 |\n",
-        "| Flipping (Horizontal) | 85.5 |\n",
-        "| Flipping (Vertical) | 85.1 |\n",
-        "| Scaling (0.5) | 82.1 |\n",
-        "| Scaling (1.5) | 86.2 |\n",
-        "| Scaling (2) | 81.9 |\n",
-        "| Translation (10, 10) | 84.9 |\n",
-        "| Translation (20, 20) | 84.5 |\n",
-        "| Translation (30, 30) | 84.1 |\n",
-        "| Shear (15) | 83.9 |\n",
-        "| Shear (30) | 83.5 |\n",
-        "| Shear (45) | 83.1 |\n",
-        "| Perspective | 82.5 |\n",
+        "| R (30°) | 84.5 |\n",
+        "| R (60°) | 83.9 |\n",
+        "| S (0.5) | 82.1 |\n",
+        "| S (1.5) | 86.2 |\n",
+        "| T (10, 10) | 84.9 |\n",
+        "| F (Horizontal) | 85.5 |\n",
+        "| F (Vertical) | 85.1 |\n",
+        "| Sh (15°) | 83.9 |\n",
+        "| Sh (30°) | 83.5 |\n",
+        "| P | 82.5 |\n",
+        "| R+S (30°, 0.5) | 85.8 |\n",
+        "| R+T (30°, 10, 10) | 85.4 |\n",
+        "| S+F (0.5, Horizontal) | 86.5 |\n",
         "\n",
         "\n",
         "*Observations:*\n",
         "\n",
-        "1. Flipping transformations improve accuracy slightly.\n",
-        "2. Scaling transformations with factor 1.5 improve accuracy.\n",
-        "3. Rotation transformations decrease accuracy.\n",
-        "4. Translation transformations have minimal impact.\n",
-        "5. Shear and perspective transformations decrease accuracy.\n",
+        "1. Scaling (1.5) and Rotation+Scaling (30°, 0.5) improve accuracy.\n",
+        "2. Flipping (Horizontal) and Scaling+Flipping (0.5, Horizontal) also show improvements.\n",
+        "3. Rotation (60°) and Shear (30°) decrease accuracy.\n",
+        "4. Perspective transformation has the lowest accuracy.\n",
         "\n",
         "\n",
         "*Conclusion:*\n",
         "\n",
         "1. Select transformations carefully based on dataset and task.\n",
-        "2. Flipping and scaling transformations can improve accuracy.\n",
+        "2. Combining transformations can lead to better accuracy.\n",
         "3. Avoid excessive transformations to prevent overfitting.\n",
         "\n",
         "\n",
@@ -980,11 +970,12 @@
         "import torchvision.transforms as transforms\n",
         "\n",
         "transform = transforms.Compose([\n",
-        "    transforms.RandomRotation(90),\n",
-        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.RandomRotation(30),\n",
         "    transforms.RandomScale((0.5, 1.5)),\n",
         "    transforms.RandomTranslation((10, 10)),\n",
-        "    transforms.RandomShear(15)\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
         "])\n",
         "\n",
         "train_dataset = torchvision.datasets.CIFAR10('data', train=True, download=True, transform=transform)\n",
@@ -997,36 +988,36 @@
         "3. Transfer learning with transformed data?"
       ],
       "metadata": {
-        "id": "Bntv9_Shpw_Y"
+        "id": "aflbcEONr_Ym"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The same transform used for the two features may not work optimally for other features.\n",
+        "The same transform used for two features may not work optimally for other features.\n",
         "\n",
         "\n",
         "_Reasons:_\n",
         "\n",
-        "1. Different feature characteristics: Each feature has unique properties, such as scale, range, and distribution.\n",
-        "2. Feature-specific transformations: Certain transformations suit specific features better (e.g., image vs. text).\n",
+        "1. Different feature characteristics: Each feature has unique properties (e.g., scale, range, distribution).\n",
+        "2. Feature-specific transformations: Certain transformations suit specific features better.\n",
         "3. Dataset-specific requirements: Transformations effective for one dataset may not generalize to others.\n",
         "\n",
         "\n",
         "_Feature-specific considerations:_\n",
         "\n",
-        "1. *Images*: Rotation, flipping, scaling, and color jittering.\n",
-        "2. *Text*: Tokenization, stemming, lemmatization, and word embeddings.\n",
-        "3. *Audio*: Time stretching, pitch shifting, and noise injection.\n",
-        "4. *Time-series*: Windowing, normalization, and frequency transformations.\n",
-        "5. *Tabular data*: Scaling, normalization, and encoding (e.g., one-hot encoding).\n",
+        "1. *Images*: Rotation, flipping, scaling, color jittering.\n",
+        "2. *Text*: Tokenization, stemming, lemmatization, word embeddings.\n",
+        "3. *Audio*: Time stretching, pitch shifting, noise injection.\n",
+        "4. *Time-series*: Windowing, normalization, frequency transformations.\n",
+        "5. *Tabular data*: Scaling, normalization, encoding (e.g., one-hot encoding).\n",
         "\n",
         "\n",
-        "_General-purpose transformations:_\n",
+        "_Transformations for multiple features:_\n",
         "\n",
-        "1. Standardization (e.g., mean subtraction, division by standard deviation)\n",
-        "2. Normalization (e.g., Min-Max Scaling)\n",
-        "3. Principal Component Analysis (PCA)\n",
+        "1. *Standardization*: Mean subtraction, division by standard deviation.\n",
+        "2. *Normalization*: Min-Max Scaling, L1/L2 normalization.\n",
+        "3. *Principal Component Analysis (PCA)*: Dimensionality reduction.\n",
         "\n",
         "\n",
         "_Transformations to avoid:_\n",
@@ -1076,14 +1067,7 @@
         "3. Transformation-specific hyperparameter tuning?"
       ],
       "metadata": {
-        "id": "kDnBhjByqBUi"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "0A9toF5FpdYH"
+        "id": "re9CNDocsuMC"
       }
     }
   ],
